examples/test/testpolicy7710.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7710
  namespace: namespace158
spec:
  podSelector:
    matchLabels:
      key45: value27
      key39: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value29
          key11: value21
          key38: value45
      podSelector:
        matchLabels:
          key43: value32
